# tws24-fullstack-rust

./: README.md
leptos-csr/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html
leptos-csr/src/: main.rs
leptos-csr/src/components/: app.rs  children.rs  control_flow.rs  hello.rs  home.rs  iteration.rs  mod.rs
leptos-ssr/: Cargo.toml  README.md
leptos-ssr/src/: app.rs  main.rs
