[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr", "nightly"] }
stylers = "1.0.0-alpha"

[build-dependencies]
stylers = "1.0.0-alpha"
